Fixed z-index to not show above ads

--- a/static/src/stylesheets/layout/new-header/_close-button.scss
+++ b/static/src/stylesheets/layout/new-header/_close-button.scss
@@ -7,7 +7,7 @@
     width: $veggie-burger-medium;
     border-radius: 50%;
     position: relative;
-    z-index: $zindex-sticky-top-banner;
+    z-index: $zindex-main-menu + 1;
 
     &:hover {
         background-color: $news-support-2;
